// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen matches snapshot in development mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#7E22CE",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "rgba(0, 0, 0, 0.12)",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Image
                resizeMode="contain"
                source="test-file-stub"
                style={
                  {
                    "height": 50,
                    "width": 50,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                  }
                }
                variant="headlineSmall"
              >
                Charmr
              </Text>
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <IconButton
                accessibilityLabel="Open account menu"
                icon="account-circle"
                iconColor="#40E0D0"
                onPress={[Function]}
                size={24}
                testID="user-menu-button"
              />
              <IconButton
                accessibilityLabel="Open development menu"
                icon="cog"
                iconColor="#40E0D0"
                onPress={[Function]}
                size={24}
                testID="dev-menu-button"
              />
            </View>
          </View>
          <View
            testID="response-generator"
          >
            Mock ResponseGenerator
          </View>
          <View
            style={
              {
                "position": "absolute",
                "right": 0,
                "top": "80%",
                "transform": [
                  {
                    "translateY": -50,
                  },
                ],
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <Button
                labelStyle={
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginLeft": 8,
                    "textAlign": "center",
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
                mode="contained"
                onPress={[Function]}
                style={
                  [
                    {
                      "borderRadius": 10,
                      "elevation": 4,
                      "marginRight": -55,
                      "paddingHorizontal": 8,
                      "paddingVertical": 0,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": -2,
                      },
                      "shadowOpacity": 0.25,
                      "shadowRadius": 3.84,
                      "transform": [
                        {
                          "rotate": "-90deg",
                        },
                      ],
                      "width": 140,
                    },
                    {
                      "backgroundColor": "#40E0D0",
                    },
                  ]
                }
                testID="feedback-button"
              >
                Feedback
              </Button>
              <IconButton
                icon="close"
                onPress={[Function]}
                size={14}
                style={
                  {
                    "margin": 0,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": -40,
                  }
                }
                testID="feedback-close-button"
              />
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`HomeScreen matches snapshot in production mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#7E22CE",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "rgba(0, 0, 0, 0.12)",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                }
              }
            >
              <Image
                resizeMode="contain"
                source="test-file-stub"
                style={
                  {
                    "height": 50,
                    "width": 50,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                  }
                }
                variant="headlineSmall"
              >
                Charmr
              </Text>
            </View>
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <IconButton
                accessibilityLabel="Open account menu"
                icon="account-circle"
                iconColor="#40E0D0"
                onPress={[Function]}
                size={24}
                testID="user-menu-button"
              />
            </View>
          </View>
          <View
            testID="response-generator"
          >
            Mock ResponseGenerator
          </View>
          <View
            style={
              {
                "position": "absolute",
                "right": 0,
                "top": "80%",
                "transform": [
                  {
                    "translateY": -50,
                  },
                ],
                "zIndex": 1,
              }
            }
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <Button
                labelStyle={
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginLeft": 8,
                    "textAlign": "center",
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
                mode="contained"
                onPress={[Function]}
                style={
                  [
                    {
                      "borderRadius": 10,
                      "elevation": 4,
                      "marginRight": -55,
                      "paddingHorizontal": 8,
                      "paddingVertical": 0,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": -2,
                      },
                      "shadowOpacity": 0.25,
                      "shadowRadius": 3.84,
                      "transform": [
                        {
                          "rotate": "-90deg",
                        },
                      ],
                      "width": 140,
                    },
                    {
                      "backgroundColor": "#40E0D0",
                    },
                  ]
                }
                testID="feedback-button"
              >
                Feedback
              </Button>
              <IconButton
                icon="close"
                onPress={[Function]}
                size={14}
                style={
                  {
                    "margin": 0,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": -40,
                  }
                }
                testID="feedback-close-button"
              />
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RNCSafeAreaProvider>
`;
